NAVAPP-368 Fix arrow up button overlap with the bloomreach logo

--- a/navigation-application/projects/navapp/src/app/main-menu/components/main-menu.component.scss
+++ b/navigation-application/projects/navapp/src/app/main-menu/components/main-menu.component.scss
@@ -27,7 +27,7 @@
   height: $menu-top-item-height;
   min-height: $menu-top-item-height;
   background-color: $menu-bg;
-  z-index: 1;
+  z-index: 2;
 
   .mat-icon {
     color: $white;
