--- a/navigation-application/projects/navapp/src/app/main-menu/components/menu-scroll/menu-scroll.component.scss
+++ b/navigation-application/projects/navapp/src/app/main-menu/components/menu-scroll/menu-scroll.component.scss
@@ -17,7 +17,7 @@
 @import 'variables';
 
 :host {
-  display: inline-block;
+  display: block;
   position: relative;
 
   &.click-transition .content {
